--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "@nestjs/core": "^8.0.11",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.11",
+    "@nestjs/platform-socket.io": "^8.0.11",
     "@nestjs/swagger": "^5.1.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@nestjs/websockets": "^8.0.11",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -53,7 +55,7 @@
     "typeorm-seeding": "^1.6.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
+    "@nestjs/cli": "^8.1.2",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.11",
     "@types/bcrypt": "^5.0.0",
@@ -61,6 +63,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.10.3",
     "@types/passport-local": "^1.0.34",
+    "@types/socket.io": "^3.0.2",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
