--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.10.3",
     "@types/passport-local": "^1.0.34",
     "@types/socket.io": "^3.0.2",
